eda rerun, now need to update company names/mentions

--- a/Output/All Data EDA/NLP EDA - NER on Company Names/Company Mentions Average.tex
+++ b/Output/All Data EDA/NLP EDA - NER on Company Names/Company Mentions Average.tex
@@ -3,3 +3,4 @@
 \renewcommand{\avgCompanyMentions}{98.66}
 \renewcommand{\avgCompanyMentions}{98.66}
 \renewcommand{\avgCompanyMentions}{98.66}
+\renewcommand{\avgCompanyMentions}{98.63}
