--- a/Output/All Data EDA/NLP EDA/avg_call_length.tex
+++ b/Output/All Data EDA/NLP EDA/avg_call_length.tex
@@ -2,3 +2,5 @@
 \newcommand{\avgCallLength}{8,776.18}
 \renewcommand{\avgCallLength}{8,754.25}
 \renewcommand{\avgCallLength}{8,754.25}
+\renewcommand{\avgCallLength}{8,759.68}
+\renewcommand{\avgCallLength}{8,759.68}
