--- a/Output/All Data EDA/Tabular EDA/Numeric_Summary_Statistics.tex
+++ b/Output/All Data EDA/Tabular EDA/Numeric_Summary_Statistics.tex
@@ -16,118 +16,164 @@ Variable Name & Mean & Minimum & Median & Maximum & Standard Deviation & Variabl
 \endfoot
 \bottomrule
 \endlastfoot
+Difference in Cash Per Share from prior fixed quarter & -0.01 & -69.19 & 0.00 & 69.02 & 4.54 & Additional Change Ratios \\
+Difference in Cash Ratio from prior fixed quarter & 0.05 & -53.11 & 0.00 & 53.11 & 3.98 & Additional Change Ratios \\
+Difference in Debt Ratio (Alternative) from prior fixed quarter & 0.00 & -0.76 & 0.00 & 0.78 & 0.05 & Additional Change Ratios \\
+Difference in Debt Ratio from prior fixed quarter & 0.00 & -0.82 & 0.00 & 0.83 & 0.05 & Additional Change Ratios \\
+Difference in Debt to Equity Ratio from prior fixed quarter & -1.90 & -1,915.81 & 0.00 & 1,892.37 & 113.71 & Additional Change Ratios \\
+Difference in EBIT to Revenue from prior fixed quarter & -0.00 & -0.66 & 0.00 & 0.59 & 0.09 & Additional Change Ratios \\
+Difference in Enterprise Value Multiplier from prior fixed quarter & 0.25 & -1,036.95 & 0.00 & 1,036.95 & 121.22 & Additional Change Ratios \\
+Difference in Equity Multiplier from prior fixed quarter & -1.33 & -1,292.75 & 0.00 & 1,292.75 & 80.06 & Additional Change Ratios \\
+Difference in Free Cash Flow Per Share from prior fixed quarter & 0.01 & -10.68 & 0.01 & 10.68 & 1.83 & Additional Change Ratios \\
+Difference in Free Cash Flow to Operating Cash Flow from prior fixed quarter & 0.01 & -13.40 & 0.00 & 13.40 & 2.40 & Additional Change Ratios \\
+Difference in Operating Cash Flow Per Share from prior fixed quarter & 0.01 & -12.80 & 0.02 & 12.80 & 1.79 & Additional Change Ratios \\
+Difference in Operating Cash Flow to Sales from prior fixed quarter & 0.00 & -0.79 & 0.01 & 0.79 & 0.14 & Additional Change Ratios \\
+Difference in Quick Ratio from prior fixed quarter & -0.00 & -5.30 & 0.00 & 5.16 & 0.51 & Additional Change Ratios \\
+Difference in Return on Assets from prior fixed quarter & -0.00 & -0.10 & 0.00 & 0.10 & 0.01 & Additional Change Ratios \\
+Difference in Return on Capital Employed from prior fixed quarter & -0.00 & -0.14 & 0.00 & 0.13 & 0.02 & Additional Change Ratios \\
+Difference in Return on Equity from prior fixed quarter & -0.00 & -2.11 & 0.00 & 2.11 & 0.23 & Additional Change Ratios \\
+Differnce in Current Ratio from prior fixed quarter & -0.00 & -6.87 & 0.00 & 6.97 & 0.61 & Additional Change Ratios \\
+Cash Per Share & 4.57 & 0.00 & 2.13 & 69.91 & 9.64 & Additional Ratios \\
+Cash Ratio & 1.21 & 0.00 & 0.28 & 53.17 & 6.23 & Additional Ratios \\
+Current Ratio & 1.93 & 0.35 & 1.58 & 7.93 & 1.33 & Additional Ratios \\
+Debt Ratio & 0.35 & 0.00 & 0.32 & 0.94 & 0.19 & Additional Ratios \\
+Debt Ratio (Alternative Definition) & 0.65 & 0.28 & 0.64 & 1.22 & 0.17 & Additional Ratios \\
+Debt to Equity Ratio & -34.63 & -1,890.41 & 1.70 & 25.40 & 256.02 & Additional Ratios \\
+EBIT to Revenue & 0.12 & -0.26 & 0.11 & 0.47 & 0.12 & Additional Ratios \\
+Enterprise Value Multiplier & 59.08 & -309.75 & 40.67 & 727.20 & 125.93 & Additional Ratios \\
+Equity Multiplier & -22.79 & -1,270.10 & 2.71 & 22.64 & 175.08 & Additional Ratios \\
+Free Cash Flow Per Share & 0.57 & -2.98 & 0.39 & 7.70 & 1.52 & Additional Ratios \\
+Free Cash Flow to Operating Cash Flow & 0.72 & -2.42 & 0.66 & 10.98 & 1.86 & Additional Ratios \\
+Operating Cash Flow Per Share & 1.48 & -0.98 & 1.04 & 11.82 & 1.92 & Additional Ratios \\
+Operating Cash Flow to Sales & 0.16 & -0.15 & 0.14 & 0.64 & 0.15 & Additional Ratios \\
+Quick Ratio & 1.36 & 0.00 & 1.15 & 6.12 & 0.98 & Additional Ratios \\
+Return on Assets & 0.01 & -0.03 & 0.01 & 0.06 & 0.02 & Additional Ratios \\
+Return on Capital Employed & 0.03 & -0.03 & 0.02 & 0.11 & 0.03 & Additional Ratios \\
+Return on Equity & 0.01 & -1.32 & 0.03 & 0.78 & 0.25 & Additional Ratios \\
 Altman's Z Score & 1.88 & -0.91 & 1.61 & 7.56 & 1.28 & Altman's Z Score \\
-Accounts Payable (Balance Sheet) & 966,256,179.24 & -237,651,171.00 & 358,675,500.00 & 11,433,000,000.00 & 1,564,143,869.54 & Financial Statements \\
-Accounts Payable (Cash Flow Statement) & 5,115,097.34 & -321,769,000.00 & 0.00 & 1,789,652,000.00 & 82,020,828.64 & Financial Statements \\
-Accounts Receivables & -11,276,972.01 & -544,000,000.00 & 0.00 & 325,000,000.00 & 91,302,900.98 & Financial Statements \\
-Accumulated Other Comprehensive Income (Loss) & -404,904,065.77 & -5,290,000,000.00 & -74,923,500.00 & 431,595,000.00 & 880,562,727.62 & Financial Statements \\
-Capital Expenditure & -192,838,993.57 & -1,867,000,000.00 & -61,000,000.00 & 412,700.00 & 309,755,067.36 & Financial Statements \\
-Capital Lease Obligations & 25,062,333.48 & 0.00 & 0.00 & 9,056,234,000.00 & 228,139,330.33 & Financial Statements \\
-Cash and Cash Equivalents & 869,139,501.47 & 0.00 & 334,747,500.00 & 9,223,000,000.00 & 1,373,785,187.87 & Financial Statements \\
-Cash and Short Term Investments & 1,064,264,890.38 & 0.00 & 365,150,000.00 & 15,601,000,000.00 & 1,892,893,943.18 & Financial Statements \\
-Cash at Beginning of Period & 875,066,189.86 & -2,556,000.00 & 336,188,500.00 & 9,610,000,000.00 & 1,399,673,823.88 & Financial Statements \\
-Cash at End of Period & 881,467,356.71 & -154,400.00 & 337,800,000.00 & 9,743,000,000.00 & 1,410,805,303.47 & Financial Statements \\
-Change in Working Capital & -17,622,464.72 & -870,000,000.00 & -2,509,500.00 & 756,000,000.00 & 183,386,926.92 & Financial Statements \\
-Common Stock & 333,701,836.30 & -539,800.00 & 3,962,000.00 & 9,817,134,000.00 & 936,073,406.58 & Financial Statements \\
-Common Stock Issued & 44,261,851.94 & -3,572,000.00 & 43,000.00 & 1,111,490,728.00 & 123,285,381.77 & Financial Statements \\
-Common Stock Repurchased & -78,688,233.14 & -2,086,545,366.00 & -797,000.00 & 545,656,614.52 & 187,838,839.66 & Financial Statements \\
-Cost and Expenses & 2,339,756,005.83 & -2,495,000.00 & 1,130,100,000.00 & 22,769,000,000.00 & 3,398,867,286.33 & Financial Statements \\
-Cost of Revenue & 1,639,068,160.07 & -3,094,000.00 & 791,749,000.00 & 18,303,000,000.00 & 2,432,969,396.59 & Financial Statements \\
-Debt Repayment & -246,924,032.20 & -3,001,000,000.00 & -32,044,500.00 & 200.00 & 471,308,141.50 & Financial Statements \\
-Deferred Income Tax & 6,021,092.62 & -253,000,000.00 & 64,500.00 & 1,850,454,000.00 & 59,026,597.62 & Financial Statements \\
-Deferred Revenue & 309,581,598.24 & -116,912,000.00 & 48,000,000.00 & 4,918,100,000.00 & 646,673,378.88 & Financial Statements \\
-Depreciation and Amortization (Cash Flow Statement) & 142,785,944.04 & -675,312.00 & 53,814,500.00 & 1,529,000,000.00 & 212,219,854.14 & Financial Statements \\
-Depreciation and Amortization (Income Statement) & 141,427,421.90 & -1,550,000.00 & 54,944,500.00 & 1,371,000,000.00 & 204,346,754.15 & Financial Statements \\
-Diluted EPS & 0.52 & -156.36 & 0.51 & 49.73 & 3.27 & Financial Statements \\
-Dividends Paid & -91,477,627.48 & -1,233,000,000.00 & -21,000,500.00 & 0.00 & 182,607,289.06 & Financial Statements \\
-EBITDA & 446,138,301.60 & -66,200,000.00 & 194,050,000.00 & 4,410,000,000.00 & 643,419,252.02 & Financial Statements \\
+Difference in Altman's Z from prior fixed quarter & -0.01 & -4.84 & 0.01 & 4.41 & 0.39 & Change Ratios \\
+Difference in EBITDA Ratio from prior fixed quarter & -0.00 & -3.09 & 0.00 & 5.20 & 0.16 & Change Ratios \\
+Difference in Gross Profit Ratio from prior fixed quarter & -0.00 & -3.16 & 0.00 & 5.23 & 0.15 & Change Ratios \\
+Difference in Income Before Tax Ratio from prior fixed quarter & -0.00 & -6.69 & 0.00 & 6.43 & 0.33 & Change Ratios \\
+Difference in Net Income Ratio from prior fixed quarter & -0.00 & -7.13 & 0.00 & 5.45 & 0.28 & Change Ratios \\
+Difference in Operating Income Ratio from prior fixed quarter & -0.00 & -7.36 & 0.00 & 5.20 & 0.27 & Change Ratios \\
+Difference in Ratio A from prior fixed quarter & -0.00 & -0.10 & 0.00 & 0.10 & 0.01 & Change Ratios \\
+Difference in Ratio B from prior fixed quarter & -0.00 & -0.56 & 0.00 & 0.57 & 0.04 & Change Ratios \\
+Difference in Ratio C from prior fixed quarter & -0.01 & -7.77 & 0.01 & 7.15 & 0.57 & Change Ratios \\
+Difference in Ratio D from prior fixed quarter & -0.00 & -0.57 & 0.00 & 0.60 & 0.05 & Change Ratios \\
+Difference in Ratio E from prior fixed quarter & 0.00 & -0.80 & 0.00 & 0.98 & 0.07 & Change Ratios \\
+Accounts Payable (Balance Sheet) & 957,290,323.93 & -237,651,171.00 & 356,700,000.00 & 11,433,000,000.00 & 1,551,108,353.02 & Financial Statements \\
+Accounts Payable (Cash Flow Statement) & 5,154,565.15 & -321,769,000.00 & 0.00 & 1,789,652,000.00 & 82,110,968.91 & Financial Statements \\
+Accounts Receivables & -11,478,236.25 & -544,000,000.00 & 0.00 & 325,000,000.00 & 91,535,961.30 & Financial Statements \\
+Accumulated Other Comprehensive Income (Loss) & -404,483,300.22 & -5,290,000,000.00 & -77,514,000.00 & 431,595,000.00 & 874,353,108.41 & Financial Statements \\
+Capital Expenditure & -192,514,484.47 & -1,867,000,000.00 & -60,129,000.00 & 412,700.00 & 310,057,440.27 & Financial Statements \\
+Capital Lease Obligations & 24,642,498.79 & 0.00 & 0.00 & 9,056,234,000.00 & 228,328,885.18 & Financial Statements \\
+Cash and Cash Equivalents & 862,135,865.07 & 0.00 & 333,000,000.00 & 9,223,000,000.00 & 1,366,595,243.17 & Financial Statements \\
+Cash and Short Term Investments & 1,060,086,810.64 & 0.00 & 363,008,000.00 & 15,601,000,000.00 & 1,890,682,420.93 & Financial Statements \\
+Cash at Beginning of Period & 867,410,489.82 & -2,556,000.00 & 334,000,000.00 & 9,610,000,000.00 & 1,388,834,800.13 & Financial Statements \\
+Cash at End of Period & 871,017,693.39 & -154,400.00 & 335,469,000.00 & 9,743,000,000.00 & 1,394,641,397.30 & Financial Statements \\
+Change in Working Capital & -17,557,103.20 & -870,000,000.00 & -2,384,000.00 & 753,000,000.00 & 183,788,257.05 & Financial Statements \\
+Common Stock & 329,277,684.36 & -539,800.00 & 3,800,000.00 & 9,817,134,000.00 & 925,626,949.20 & Financial Statements \\
+Common Stock Issued & 44,672,509.36 & -3,572,000.00 & 43,000.00 & 1,111,490,728.00 & 124,027,450.20 & Financial Statements \\
+Common Stock Repurchased & -78,527,033.90 & -2,086,545,366.00 & -773,000.00 & 545,656,614.52 & 188,219,352.34 & Financial Statements \\
+Cost and Expenses & 2,317,513,877.07 & -2,495,000.00 & 1,121,064,000.00 & 22,769,000,000.00 & 3,357,899,606.58 & Financial Statements \\
+Cost of Revenue & 1,624,233,369.18 & -3,094,000.00 & 787,700,000.00 & 18,303,000,000.00 & 2,405,765,370.43 & Financial Statements \\
+Debt Repayment & -247,880,234.24 & -3,001,000,000.00 & -33,400,000.00 & 200.00 & 471,724,050.37 & Financial Statements \\
+Deferred Income Tax & 6,154,669.54 & -253,000,000.00 & 64,000.00 & 1,850,454,000.00 & 58,927,713.28 & Financial Statements \\
+Deferred Revenue & 310,000,739.66 & -116,912,000.00 & 50,066,000.00 & 4,918,100,000.00 & 642,489,899.31 & Financial Statements \\
+Depreciation and Amortization (Cash Flow Statement) & 141,811,048.14 & -675,312.00 & 53,551,000.00 & 1,529,000,000.00 & 210,315,836.18 & Financial Statements \\
+Depreciation and Amortization (Income Statement) & 140,571,212.83 & -1,550,000.00 & 54,507,000.00 & 1,371,000,000.00 & 203,167,331.44 & Financial Statements \\
+Diluted EPS & 0.51 & -156.36 & 0.51 & 49.73 & 3.31 & Financial Statements \\
+Dividends Paid & -91,357,096.76 & -1,233,000,000.00 & -21,054,000.00 & 0.00 & 182,429,714.55 & Financial Statements \\
+EBITDA & 444,995,396.82 & -66,200,000.00 & 193,000,000.00 & 4,410,000,000.00 & 644,706,471.62 & Financial Statements \\
 EBITDA Ratio & 0.20 & -5.77 & 0.17 & 2.16 & 0.22 & Financial Statements \\
-EPS & 0.53 & -156.36 & 0.52 & 53.75 & 3.29 & Financial Statements \\
-Effect of Foreign Exchange Changes on Cash & -1,653,388.25 & -65,000,000.00 & 0.00 & 52,000,000.00 & 11,180,607.85 & Financial Statements \\
-Free Cash Flow & 157,084,973.55 & -541,000,000.00 & 51,192,500.00 & 2,683,000,000.00 & 388,980,015.53 & Financial Statements \\
-General and Administrative Expenses & 153,358,448.12 & -2,738,500.00 & 32,647,000.00 & 2,007,000,000.00 & 301,738,888.27 & Financial Statements \\
-Goodwill & 2,002,690,830.53 & -202,702,100.00 & 630,531,000.00 & 23,389,000,000.00 & 3,533,369,156.82 & Financial Statements \\
-Goodwill and Intangible Assets & 3,124,212,237.48 & -1,618,944,000.00 & 966,716,000.00 & 37,123,000,000.00 & 5,678,672,562.17 & Financial Statements \\
-Gross Profit & 868,732,901.33 & -7,195,000.00 & 379,801,000.00 & 9,223,000,000.00 & 1,372,085,330.98 & Financial Statements \\
+EPS & 0.52 & -156.36 & 0.52 & 53.75 & 3.33 & Financial Statements \\
+Effect of Foreign Exchange Changes on Cash & -1,697,085.83 & -65,000,000.00 & 0.00 & 52,000,000.00 & 11,200,007.88 & Financial Statements \\
+Free Cash Flow & 156,892,657.81 & -541,000,000.00 & 51,691,000.00 & 2,683,000,000.00 & 389,666,937.19 & Financial Statements \\
+General and Administrative Expenses & 153,933,016.99 & -2,738,500.00 & 33,768,000.00 & 2,007,000,000.00 & 303,900,948.38 & Financial Statements \\
+Goodwill & 2,009,260,205.06 & -202,702,100.00 & 636,039,000.00 & 23,389,000,000.00 & 3,554,057,246.39 & Financial Statements \\
+Goodwill and Intangible Assets & 3,102,882,804.88 & -1,618,944,000.00 & 970,000,000.00 & 37,123,000,000.00 & 5,639,038,312.52 & Financial Statements \\
+Gross Profit & 861,821,178.07 & -7,195,000.00 & 378,500,000.00 & 9,223,000,000.00 & 1,365,410,717.45 & Financial Statements \\
 Gross Profit Ratio & 0.37 & -5.65 & 0.34 & 2.32 & 0.26 & Financial Statements \\
-Income Before Tax & 256,118,983.25 & -353,153,000.00 & 92,535,500.00 & 2,951,000,000.00 & 434,784,626.43 & Financial Statements \\
+Income Before Tax & 255,351,974.53 & -353,153,000.00 & 91,900,000.00 & 2,951,000,000.00 & 434,623,029.43 & Financial Statements \\
 Income Before Tax Ratio & 0.07 & -9.38 & 0.09 & 2.68 & 0.35 & Financial Statements \\
-Income Tax Expense & 69,610,448.41 & -119,131,000.00 & 22,400,000.00 & 736,000,000.00 & 121,357,794.26 & Financial Statements \\
-Intangible Assets & 838,566,674.64 & -421,000.00 & 169,050,000.00 & 14,110,100,000.00 & 1,786,919,275.21 & Financial Statements \\
-Interest Expense & 46,670,431.96 & -16,400,000.00 & 23,050,000.00 & 386,000,000.00 & 61,968,392.63 & Financial Statements \\
-Interest Income & 2,377,179.84 & -62,900.00 & 0.00 & 69,000,000.00 & 6,882,052.66 & Financial Statements \\
-Inventory (Balance Sheet) & 941,316,423.17 & -19,626,000.00 & 407,512,500.00 & 8,328,000,000.00 & 1,407,393,286.13 & Financial Statements \\
-Inventory (Cash Flow Statement) & -10,383,742.26 & -420,000,000.00 & 0.00 & 289,000,000.00 & 70,575,014.44 & Financial Statements \\
-Investments in Property, Plants, and Equipment & -194,182,976.28 & -1,921,864,000.00 & -61,381,500.00 & 412,700.00 & 313,040,469.62 & Financial Statements \\
-Long-Term Debt & 4,157,384,374.86 & -651,718.00 & 1,828,522,000.00 & 31,359,000,000.00 & 5,563,500,112.28 & Financial Statements \\
-Long-Term Investments & 493,613,595.97 & -490,677,000.00 & 12,732,500.00 & 10,981,000,000.00 & 1,369,480,812.68 & Financial Statements \\
-Minority Interest & 92,264,442.06 & -20,252,654.04 & 1,759,000.00 & 2,316,406,000.00 & 270,956,746.41 & Financial Statements \\
-Net Acquisitions & -32,625,967.26 & -805,960,000.00 & 0.00 & 249,000,000.00 & 115,701,304.21 & Financial Statements \\
-Net Cash Provided by Operating Activities & 354,893,994.40 & -179,404,000.00 & 144,174,000.00 & 3,870,000,000.00 & 549,880,984.75 & Financial Statements \\
-Net Cash Used for Investing Activities & -253,339,898.47 & -2,840,033,000.00 & -71,524,000.00 & 325,900,000.00 & 444,328,516.72 & Financial Statements \\
-Net Cash Used or Provided by Financing Activities & -116,189,055.63 & -2,444,000,000.00 & -29,317,500.00 & 1,094,000,000.00 & 399,791,510.60 & Financial Statements \\
-Net Change in Cash & 4,919,539.31 & -1,161,000,000.00 & 439,500.00 & 1,401,000,000.00 & 269,603,027.07 & Financial Statements \\
-Net Debt & 3,582,100,670.97 & -1,044,500,000.00 & 1,498,679,500.00 & 30,761,000,000.00 & 5,313,477,844.99 & Financial Statements \\
-Net Income (Cash Flow Statement) & 189,838,210.19 & -327,000,000.00 & 66,869,500.00 & 2,402,000,000.00 & 337,034,710.22 & Financial Statements \\
-Net Income (Income Statement) & 186,964,309.93 & -329,864,000.00 & 67,050,000.00 & 2,340,000,000.00 & 332,573,670.18 & Financial Statements \\
+Income Tax Expense & 69,444,774.33 & -119,131,000.00 & 22,100,000.00 & 736,000,000.00 & 121,681,731.43 & Financial Statements \\
+Intangible Assets & 835,940,509.51 & -421,000.00 & 170,197,000.00 & 14,110,100,000.00 & 1,785,542,119.17 & Financial Statements \\
+Interest Expense & 46,568,508.69 & -16,400,000.00 & 23,000,000.00 & 386,000,000.00 & 61,712,161.15 & Financial Statements \\
+Interest Income & 2,372,725.23 & -62,900.00 & 0.00 & 69,000,000.00 & 6,859,086.75 & Financial Statements \\
+Inventory (Balance Sheet) & 933,043,177.40 & -19,626,000.00 & 403,789,000.00 & 8,328,000,000.00 & 1,398,934,358.21 & Financial Statements \\
+Inventory (Cash Flow Statement) & -10,302,495.14 & -420,000,000.00 & 0.00 & 289,000,000.00 & 70,374,129.32 & Financial Statements \\
+Investments in Property, Plants, and Equipment & -193,897,744.95 & -1,921,864,000.00 & -60,373,000.00 & 412,700.00 & 313,436,441.14 & Financial Statements \\
+Long-Term Debt & 4,159,473,460.27 & -651,718.00 & 1,822,139,000.00 & 31,359,000,000.00 & 5,574,538,232.32 & Financial Statements \\
+Long-Term Investments & 494,196,440.41 & -490,677,000.00 & 12,449,000.00 & 10,981,000,000.00 & 1,359,571,399.50 & Financial Statements \\
+Minority Interest & 90,043,651.07 & -20,252,654.04 & 1,600,000.00 & 2,316,406,000.00 & 268,200,905.93 & Financial Statements \\
+Net Acquisitions & -32,878,764.18 & -805,960,000.00 & 0.00 & 249,000,000.00 & 116,107,004.20 & Financial Statements \\
+Net Cash Provided by Operating Activities & 352,446,106.81 & -179,404,000.00 & 143,626,000.00 & 3,870,000,000.00 & 545,602,564.63 & Financial Statements \\
+Net Cash Used for Investing Activities & -252,575,304.44 & -2,840,033,000.00 & -71,100,000.00 & 325,900,000.00 & 443,647,871.52 & Financial Statements \\
+Net Cash Used or Provided by Financing Activities & -114,570,062.00 & -2,444,000,000.00 & -29,157,000.00 & 1,094,000,000.00 & 399,330,481.52 & Financial Statements \\
+Net Change in Cash & 3,933,018.18 & -1,161,000,000.00 & 573,000.00 & 1,401,000,000.00 & 269,005,283.68 & Financial Statements \\
+Net Debt & 3,597,141,664.59 & -1,044,500,000.00 & 1,508,594,000.00 & 30,761,000,000.00 & 5,338,457,121.62 & Financial Statements \\
+Net Income (Cash Flow Statement) & 189,122,176.12 & -327,000,000.00 & 66,190,000.00 & 2,402,000,000.00 & 336,635,167.35 & Financial Statements \\
+Net Income (Income Statement) & 185,944,828.27 & -329,864,000.00 & 66,389,000.00 & 2,340,000,000.00 & 330,952,161.49 & Financial Statements \\
 Net Income Ratio & 0.05 & -8.88 & 0.07 & 2.72 & 0.29 & Financial Statements \\
-Net Property Plant Equipment & 4,946,156,314.31 & 0.00 & 1,413,197,500.00 & 44,441,000,000.00 & 7,878,581,995.75 & Financial Statements \\
-Net Receivables & 1,283,363,100.04 & -4,199,600.00 & 569,700,000.00 & 12,146,000,000.00 & 1,794,448,777.75 & Financial Statements \\
-Non-Current Deferred Revenue & 248,223,425.63 & -500,933,000.00 & 0.00 & 5,778,000,000.00 & 725,439,952.22 & Financial Statements \\
-Non-Current Deferred Tax Liabilities & 704,046,356.92 & -3,818,507.00 & 137,248,500.00 & 8,306,000,000.00 & 1,394,360,238.89 & Financial Statements \\
-Operating Cash Flow & 354,893,994.40 & -179,404,000.00 & 144,174,000.00 & 3,870,000,000.00 & 549,880,984.75 & Financial Statements \\
-Operating Expenses & 546,048,778.26 & -13,530,000.00 & 222,695,500.00 & 6,252,000,000.00 & 932,339,076.14 & Financial Statements \\
-Operating Income & 302,408,763.01 & -208,377,000.00 & 123,446,500.00 & 3,294,000,000.00 & 472,764,842.78 & Financial Statements \\
+Net Property Plant Equipment & 4,931,687,321.78 & 0.00 & 1,389,600,000.00 & 44,441,000,000.00 & 7,885,938,319.99 & Financial Statements \\
+Net Receivables & 1,276,905,848.63 & -4,199,600.00 & 570,338,000.00 & 12,116,000,000.00 & 1,776,578,353.43 & Financial Statements \\
+Non-Current Deferred Revenue & 248,840,448.23 & -500,933,000.00 & 0.00 & 5,778,000,000.00 & 723,186,467.01 & Financial Statements \\
+Non-Current Deferred Tax Liabilities & 702,874,797.74 & -3,818,507.00 & 135,597,000.00 & 8,306,000,000.00 & 1,400,029,509.57 & Financial Statements \\
+Operating Cash Flow & 352,446,106.81 & -179,404,000.00 & 143,626,000.00 & 3,870,000,000.00 & 545,602,564.63 & Financial Statements \\
+Operating Expenses & 538,189,512.49 & -13,530,000.00 & 221,700,000.00 & 6,252,000,000.00 & 918,426,909.60 & Financial Statements \\
+Operating Income & 302,231,079.76 & -208,377,000.00 & 122,000,000.00 & 3,294,000,000.00 & 475,077,278.15 & Financial Statements \\
 Operating Income Ratio & 0.11 & -9.71 & 0.12 & 2.86 & 0.31 & Financial Statements \\
-Other Assets & 6,824.88 & -19,834,700.00 & 0.00 & 8,948,000.00 & 427,499.44 & Financial Statements \\
-Other Current Assets & 371,170,937.98 & -98,000.00 & 120,313,000.00 & 4,968,950,000.00 & 665,138,617.21 & Financial Statements \\
-Other Current Liabilities & 971,625,467.12 & -48,317,000.00 & 326,047,500.00 & 12,137,000,000.00 & 1,812,385,139.72 & Financial Statements \\
-Other Expenses & 50,748,275.86 & -64,000,000.00 & 571,500.00 & 16,189,674,590.00 & 338,468,185.65 & Financial Statements \\
-Other Financing Activities & 216,082,622.68 & -975,168,999.00 & 8,000,000.00 & 3,297,501,000.00 & 513,442,205.81 & Financial Statements \\
-Other Investing Activities & 4,846,309.09 & -448,000,000.00 & 108,000.00 & 3,060,433,659.00 & 96,863,864.12 & Financial Statements \\
-Other Liabilities & 101,452.43 & -3,063,000.00 & 0.00 & 51,076,000.00 & 2,036,383.74 & Financial Statements \\
-Other Non-Cash Items & 15,426,331.87 & -1,848,719,007.00 & 1,600,000.00 & 703,000,000.00 & 109,962,680.11 & Financial Statements \\
-Other Non-Current Assets & 506,812,134.37 & -75,012,534,818.00 & 160,004,000.00 & 8,037,000,000.00 & 1,760,996,004.39 & Financial Statements \\
-Other Non-Current Liabilities & 977,014,033.76 & -286,041,895.00 & 328,324,500.00 & 11,890,564,000.00 & 1,685,843,225.83 & Financial Statements \\
-Other Total Stockholders' Equity & 1,130,983,775.67 & -12,393,000,000.00 & 421,317,000.00 & 34,030,400,000.00 & 3,589,780,224.87 & Financial Statements \\
-Other Working Capital & 21,147,653.98 & -1,788,851,160.00 & 0.00 & 40,341,689,407.00 & 775,619,463.26 & Financial Statements \\
-Preferred Stock & 9,365,360.70 & 0.00 & 0.00 & 401,500,000.00 & 42,432,348.37 & Financial Statements \\
-Purchases of Investments & -102,973,220.34 & -11,997,654,000.00 & 0.00 & 81,823,000.00 & 344,612,110.05 & Financial Statements \\
-Research and Development Expenses & 27,530,996.50 & -214,000.00 & 0.00 & 893,000,000.00 & 93,165,301.96 & Financial Statements \\
-Retained Earnings & 3,643,670,803.88 & -4,839,000,000.00 & 1,300,015,500.00 & 37,899,000,000.00 & 6,417,848,831.20 & Financial Statements \\
-Revenue & 2,763,740,179.56 & -4,273,000.00 & 1,308,000,000.00 & 25,420,000,000.00 & 4,026,578,837.74 & Financial Statements \\
-Sales and Maturities of Investments & 97,797,529.17 & -9,409,000.00 & 0.00 & 8,936,406,000.00 & 307,975,538.51 & Financial Statements \\
-Selling General and Administrative Expenses & 300,347,623.86 & -5,054,000.00 & 120,995,500.00 & 3,343,000,000.00 & 491,028,139.53 & Financial Statements \\
-Selling and Marketing Expenses & 25,644,369.54 & -3,003,000.00 & 0.00 & 876,761,000.00 & 99,025,764.56 & Financial Statements \\
-Short Term Investments & 178,641,675.15 & -515,000.00 & 0.00 & 6,178,000,000.00 & 590,076,249.16 & Financial Statements \\
-Short-Term Debt & 464,412,829.97 & -655,561.00 & 83,408,000.00 & 5,363,000,000.00 & 881,907,750.85 & Financial Statements \\
-Stock-Based Compensation & 14,543,170.39 & -36,000,000.00 & 5,100,000.00 & 254,000,000.00 & 30,176,788.95 & Financial Statements \\
-Tax Assets & 376,499,884.70 & -2,310,712,000.00 & 49,195,000.00 & 6,535,000,000.00 & 902,752,313.04 & Financial Statements \\
-Tax Payable & 61,484,524.50 & -87,400.00 & 2,828,000.00 & 1,187,000,000.00 & 152,142,261.85 & Financial Statements \\
-Total Assets & 15,623,432,251.63 & 123,279.00 & 7,059,132,500.00 & 131,556,000,000.00 & 21,907,186,479.15 & Financial Statements \\
-Total Current Assets & 3,959,899,836.06 & 29,954.00 & 1,936,936,500.00 & 41,276,000,000.00 & 5,741,692,814.20 & Financial Statements \\
-Total Current Liabilities & 2,835,208,388.08 & 12,178.00 & 1,142,000,000.00 & 29,919,000,000.00 & 4,276,706,355.30 & Financial Statements \\
-Total Debt & 4,591,360,324.25 & 0.00 & 2,025,288,000.00 & 37,124,000,000.00 & 6,242,100,940.74 & Financial Statements \\
-Total Equity & 4,987,498,022.07 & -501,467,000.00 & 2,115,000,000.00 & 49,975,000,000.00 & 7,273,418,780.53 & Financial Statements \\
-Total Investments & 728,580,576.01 & -334,673,000.00 & 42,569,500.00 & 19,331,000,000.00 & 1,963,853,124.76 & Financial Statements \\
-Total Liabilities & 9,810,477,769.61 & 79,283.00 & 4,315,644,500.00 & 87,293,000,000.00 & 13,464,804,883.88 & Financial Statements \\
-Total Liabilities and Stockholders' Equity & 15,588,449,533.11 & 123,279.00 & 7,057,469,000.00 & 131,556,000,000.00 & 21,902,353,741.35 & Financial Statements \\
-Total Liabilities and Total Equity & 15,588,449,533.11 & 123,279.00 & 7,057,469,000.00 & 131,556,000,000.00 & 21,902,353,741.35 & Financial Statements \\
-Total Non-Current Assets & 11,003,567,097.67 & 49,861.00 & 4,170,300,000.00 & 104,263,000,000.00 & 15,962,173,630.31 & Financial Statements \\
-Total Non-Current Liabilities & 6,631,926,419.44 & 53,696.00 & 2,823,750,000.00 & 54,300,000,000.00 & 9,401,594,024.20 & Financial Statements \\
-Total Other Income Expenses Net & -13,084,263.76 & -503,976,000.00 & -900,000.00 & 286,000,000.00 & 72,543,230.98 & Financial Statements \\
-Total Stockholders' Equity & 4,949,232,739.44 & -526,491,000.00 & 2,110,773,500.00 & 49,269,000,000.00 & 7,190,925,518.03 & Financial Statements \\
-Weighted Average Shares Outstanding & 355,222,897.10 & 0.00 & 146,624,411.00 & 13,751,391,147.00 & 727,556,653.14 & Financial Statements \\
-Weighted Average Shares Outstanding (Diluted) & 318,383,151.79 & 0.00 & 146,042,500.00 & 13,986,214,405.00 & 548,657,214.64 & Financial Statements \\
-Market Capitalization & 19,114,488,572.95 & 106,422.00 & 6,415,265,242.50 & 726,320,349,360.00 & 44,481,854,214.23 & Market Capitalization \\
-Days Since Call & 58.13 & 0.00 & 61.00 & 91.00 & 13.42 & Metadata \\
-First Principal Component of Tone & -0.03 & -2.91 & -0.22 & 25.35 & 1.32 & NLP Feature \\
-Gunning-Fog Score & 12.51 & 8.55 & 12.42 & 19.29 & 1.32 & NLP Feature \\
-Number of Questions & 36.47 & 0.00 & 35.00 & 107.00 & 16.38 & NLP Feature \\
+Other Assets & 5,662.39 & -19,834,700.00 & 0.00 & 8,948,000.00 & 421,776.93 & Financial Statements \\
+Other Current Assets & 370,526,390.88 & -98,000.00 & 119,600,000.00 & 4,968,950,000.00 & 664,643,317.21 & Financial Statements \\
+Other Current Liabilities & 955,075,890.93 & -48,317,000.00 & 322,800,000.00 & 12,137,000,000.00 & 1,782,231,297.37 & Financial Statements \\
+Other Expenses & 50,749,806.82 & -64,000,000.00 & 585,000.00 & 16,189,674,590.00 & 342,110,629.66 & Financial Statements \\
+Other Financing Activities & 217,421,866.42 & -975,168,999.00 & 8,000,000.00 & 3,297,501,000.00 & 515,334,960.45 & Financial Statements \\
+Other Investing Activities & 4,573,739.09 & -448,000,000.00 & 106,000.00 & 3,060,433,659.00 & 96,736,267.62 & Financial Statements \\
+Other Liabilities & 95,902.58 & -3,063,000.00 & 0.00 & 51,076,000.00 & 1,967,227.53 & Financial Statements \\
+Other Non-Cash Items & 15,325,139.75 & -1,848,719,007.00 & 1,621,000.00 & 703,000,000.00 & 109,294,805.79 & Financial Statements \\
+Other Non-Current Assets & 506,778,121.04 & -75,012,534,818.00 & 158,696,000.00 & 8,037,000,000.00 & 1,778,143,597.09 & Financial Statements \\
+Other Non-Current Liabilities & 975,892,048.39 & -286,041,895.00 & 327,700,000.00 & 11,890,564,000.00 & 1,686,827,873.95 & Financial Statements \\
+Other Total Stockholders' Equity & 1,135,331,510.72 & -12,393,000,000.00 & 427,000,000.00 & 34,030,400,000.00 & 3,586,435,863.55 & Financial Statements \\
+Other Working Capital & 21,414,823.22 & -1,788,851,160.00 & 0.00 & 40,341,689,407.00 & 786,599,061.35 & Financial Statements \\
+Preferred Stock & 9,475,146.22 & 0.00 & 0.00 & 401,500,000.00 & 42,785,110.93 & Financial Statements \\
+Purchases of Investments & -104,151,034.82 & -11,997,654,000.00 & 0.00 & 81,823,000.00 & 346,711,949.30 & Financial Statements \\
+Research and Development Expenses & 28,169,938.85 & -214,000.00 & 0.00 & 893,000,000.00 & 94,071,513.75 & Financial Statements \\
+Retained Earnings & 3,628,393,969.72 & -4,839,000,000.00 & 1,293,100,000.00 & 37,899,000,000.00 & 6,424,744,717.89 & Financial Statements \\
+Revenue & 2,728,749,857.76 & -4,273,000.00 & 1,297,700,000.00 & 25,420,000,000.00 & 3,959,362,594.26 & Financial Statements \\
+Sales and Maturities of Investments & 99,796,411.86 & -9,409,000.00 & 0.00 & 8,936,406,000.00 & 311,292,561.88 & Financial Statements \\
+Selling General and Administrative Expenses & 296,899,615.00 & -5,054,000.00 & 119,600,000.00 & 3,343,000,000.00 & 486,131,457.73 & Financial Statements \\
+Selling and Marketing Expenses & 25,431,647.83 & -3,003,000.00 & 0.00 & 876,761,000.00 & 97,367,023.08 & Financial Statements \\
+Short Term Investments & 182,988,242.55 & -515,000.00 & 0.00 & 6,178,000,000.00 & 599,747,024.65 & Financial Statements \\
+Short-Term Debt & 465,870,869.02 & -655,561.00 & 83,800,000.00 & 5,363,000,000.00 & 885,210,679.51 & Financial Statements \\
+Stock-Based Compensation & 14,496,292.55 & -36,000,000.00 & 5,106,000.00 & 254,000,000.00 & 29,968,462.79 & Financial Statements \\
+Tax Assets & 378,132,518.58 & -2,310,712,000.00 & 48,963,000.00 & 6,535,000,000.00 & 909,237,680.35 & Financial Statements \\
+Tax Payable & 60,670,669.07 & -87,400.00 & 2,810,000.00 & 1,187,000,000.00 & 150,628,980.40 & Financial Statements \\
+Total Assets & 15,592,495,985.55 & 123,279.00 & 7,048,475,000.00 & 131,119,000,000.00 & 21,911,032,910.64 & Financial Statements \\
+Total Current Assets & 3,937,085,272.11 & 29,954.00 & 1,933,750,000.00 & 41,276,000,000.00 & 5,729,273,613.69 & Financial Statements \\
+Total Current Liabilities & 2,811,976,684.34 & 24,083.00 & 1,138,200,000.00 & 29,919,000,000.00 & 4,247,045,840.39 & Financial Statements \\
+Total Debt & 4,593,265,532.66 & 0.00 & 2,019,244,000.00 & 37,124,000,000.00 & 6,254,194,800.16 & Financial Statements \\
+Total Equity & 4,968,502,543.29 & -501,467,000.00 & 2,095,000,000.00 & 49,975,000,000.00 & 7,272,421,518.55 & Financial Statements \\
+Total Investments & 729,199,594.64 & -334,673,000.00 & 43,275,000.00 & 19,331,000,000.00 & 1,944,649,108.26 & Financial Statements \\
+Total Liabilities & 9,817,545,124.72 & 79,283.00 & 4,308,693,000.00 & 87,293,000,000.00 & 13,527,062,565.42 & Financial Statements \\
+Total Liabilities and Stockholders' Equity & 15,556,696,866.65 & 123,279.00 & 7,043,426,000.00 & 131,119,000,000.00 & 21,905,884,302.05 & Financial Statements \\
+Total Liabilities and Total Equity & 15,556,696,866.65 & 123,279.00 & 7,043,426,000.00 & 131,119,000,000.00 & 21,905,884,302.05 & Financial Statements \\
+Total Non-Current Assets & 11,011,964,229.49 & 49,861.00 & 4,119,200,000.00 & 104,263,000,000.00 & 15,994,777,583.25 & Financial Statements \\
+Total Non-Current Liabilities & 6,639,451,321.63 & 53,696.00 & 2,809,300,000.00 & 54,300,000,000.00 & 9,424,654,097.47 & Financial Statements \\
+Total Other Income Expenses Net & -13,134,652.92 & -503,976,000.00 & -920,000.00 & 286,000,000.00 & 72,414,124.07 & Financial Statements \\
+Total Stockholders' Equity & 4,933,321,107.00 & -526,491,000.00 & 2,088,608,000.00 & 49,269,000,000.00 & 7,194,176,771.15 & Financial Statements \\
+Weighted Average Shares Outstanding & 352,790,171.17 & 0.00 & 146,000,000.00 & 13,751,391,147.00 & 720,460,888.99 & Financial Statements \\
+Weighted Average Shares Outstanding (Diluted) & 316,630,108.94 & 0.00 & 145,951,913.00 & 13,986,214,405.00 & 547,337,219.46 & Financial Statements \\
+Market Capitalization & 18,996,749,034.57 & 106,422.00 & 6,409,459,125.00 & 726,320,349,360.00 & 44,246,873,159.19 & Market Capitalization \\
+Days Since Call & 58.39 & 0.00 & 61.00 & 91.00 & 13.05 & Metadata \\
+FinBERT Positivity Score & 0.53 & -0.28 & 0.52 & 1.61 & 0.25 & NLP Feature \\
+First Principal Component of Tone & -0.03 & -2.91 & -0.22 & 10.33 & 1.28 & NLP Feature \\
+Gunning-Fog Score & 12.50 & 8.55 & 12.41 & 19.29 & 1.31 & NLP Feature \\
+Number of Questions & 36.50 & 0.00 & 35.00 & 107.00 & 16.38 & NLP Feature \\
+Number of Questions Divided By Call Word Count & 0.00 & 0.00 & 0.00 & 0.01 & 0.00 & NLP Feature \\
 Numeric Transparency & 0.12 & 0.01 & 0.12 & 0.40 & 0.05 & NLP Feature \\
-Positivity Score & 0.19 & -0.20 & 0.18 & 0.67 & 0.10 & NLP Feature \\
-Word Count & 8,829.04 & 525.00 & 9,080.00 & 22,006.00 & 2,479.44 & NLP Feature \\
-Change Since Last Fixed Quarter Date & 0.01 & -2.00 & 0.00 & 2.00 & 0.27 & Predicted - Change \\
+Word Count & 8,834.15 & 525.00 & 9,083.00 & 22,006.00 & 2,471.87 & NLP Feature \\
+Change Since Last Fixed Quarter Date & 0.01 & -2.00 & 0.00 & 2.00 & 0.26 & Predicted - Change \\
 \end{longtable}
 
 \normalsize
