--- a/Code/Exploratory Data Analysis/Company Mentions Network/Visualize_Firm_Nodes_Edges_Company_Mentions.ipynb
+++ b/Code/Exploratory Data Analysis/Company Mentions Network/Visualize_Firm_Nodes_Edges_Company_Mentions.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "[3305 rows x 6 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
        "[1286 rows x 3 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        "[1221 rows x 3 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
        "[886 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
        "[499 rows x 2 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
        "[499 rows x 3 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1115,7 @@
        "[1221 rows x 7 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1186,22 +1186,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_19348\\2287246693.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_7984\\2372261029.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  nw_cols.rename(columns={'company1': 'Source', 'company2': 'Target', 'count': 'weight'}, inplace=True)\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_19348\\2287246693.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_7984\\2372261029.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  nw_cols['Source'].fillna(nw_cols['ticker1'], inplace=True)\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_19348\\2287246693.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_7984\\2372261029.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  nw_cols['Target'].fillna(nw_cols['ticker2'], inplace=True)\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_19348\\2287246693.py:9: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_7984\\2372261029.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1222,7 +1222,15 @@
     "nw_cols['Type'] = 'Undirected'\n",
     "# Limit to just node cols\n",
     "#nw_cols = nw_cols[['Source', 'Target']]\n",
-    "print(nw_cols)\n",
+    "print(nw_cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Load as graph\n",
     "G = nx.from_pandas_edgelist(nw_cols, \n",
     "                            source='Source', \n",
@@ -1233,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1258,10 +1266,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x222acf70a10>"
+       "<IPython.lib.display.IFrame at 0x260178aae50>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1276,6 +1284,269 @@
     "# use repulsion\n",
     "pvn.repulsion(node_distance=100)\n",
     "pvn.show('../../../Output/Company Mentions Network/Firm_Company_Mentions_Network.html')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Version Sampling 50% of Nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get all values of ticker across ticker1 and ticker2\n",
+    "all_tickers = list(set(list(pairwise_df['ticker1'].unique()) + list(pairwise_df['ticker2'].unique())))\n",
+    "# Set seed\n",
+    "import random\n",
+    "random.seed(222)\n",
+    "# Sample 50% of tickers\n",
+    "sample_tickers = random.sample(all_tickers, int(0.5 * len(all_tickers)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Source</th>\n",
+       "      <th>Target</th>\n",
+       "      <th>ticker1</th>\n",
+       "      <th>ticker2</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>Type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>ACI Worldwide Inc.</td>\n",
+       "      <td>Intel Corp.</td>\n",
+       "      <td>ACIW</td>\n",
+       "      <td>INTC</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Undirected</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>ACI Worldwide Inc.</td>\n",
+       "      <td>Target Corp.</td>\n",
+       "      <td>ACIW</td>\n",
+       "      <td>TGT</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Undirected</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>Accenture plc</td>\n",
+       "      <td>Edgewell Personal Care</td>\n",
+       "      <td>ACN</td>\n",
+       "      <td>EPC</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Undirected</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>Accenture plc</td>\n",
+       "      <td>Fidelity National Information Services Inc.</td>\n",
+       "      <td>ACN</td>\n",
+       "      <td>FIS</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Undirected</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>Accenture plc</td>\n",
+       "      <td>Hewlett Packard Enterprise</td>\n",
+       "      <td>ACN</td>\n",
+       "      <td>HPE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Undirected</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1209</th>\n",
+       "      <td>Sunoco LP</td>\n",
+       "      <td>SunCoke Energy, Inc.</td>\n",
+       "      <td>SUN</td>\n",
+       "      <td>SXC</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Undirected</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1212</th>\n",
+       "      <td>Container Store Inc. (The)</td>\n",
+       "      <td>Target Corp.</td>\n",
+       "      <td>TCS</td>\n",
+       "      <td>TGT</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Undirected</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1217</th>\n",
+       "      <td>T-Mobile US Inc.</td>\n",
+       "      <td>United States Cellular Corporation</td>\n",
+       "      <td>TMUS</td>\n",
+       "      <td>USM</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Undirected</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1218</th>\n",
+       "      <td>T-Mobile US Inc.</td>\n",
+       "      <td>Valmont Industries Inc.</td>\n",
+       "      <td>TMUS</td>\n",
+       "      <td>VMI</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Undirected</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1220</th>\n",
+       "      <td>WEC Energy Group Inc.</td>\n",
+       "      <td>Xcel Energy Inc.</td>\n",
+       "      <td>WEC</td>\n",
+       "      <td>XEL</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Undirected</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>335 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          Source                                       Target  \\\n",
+       "88            ACI Worldwide Inc.                                  Intel Corp.   \n",
+       "91            ACI Worldwide Inc.                                 Target Corp.   \n",
+       "98                 Accenture plc                       Edgewell Personal Care   \n",
+       "99                 Accenture plc  Fidelity National Information Services Inc.   \n",
+       "100                Accenture plc                   Hewlett Packard Enterprise   \n",
+       "...                          ...                                          ...   \n",
+       "1209                   Sunoco LP                         SunCoke Energy, Inc.   \n",
+       "1212  Container Store Inc. (The)                                 Target Corp.   \n",
+       "1217            T-Mobile US Inc.           United States Cellular Corporation   \n",
+       "1218            T-Mobile US Inc.                      Valmont Industries Inc.   \n",
+       "1220       WEC Energy Group Inc.                             Xcel Energy Inc.   \n",
+       "\n",
+       "     ticker1 ticker2  weight        Type  \n",
+       "88      ACIW    INTC       1  Undirected  \n",
+       "91      ACIW     TGT       2  Undirected  \n",
+       "98       ACN     EPC       1  Undirected  \n",
+       "99       ACN     FIS       1  Undirected  \n",
+       "100      ACN     HPE       1  Undirected  \n",
+       "...      ...     ...     ...         ...  \n",
+       "1209     SUN     SXC       1  Undirected  \n",
+       "1212     TCS     TGT       2  Undirected  \n",
+       "1217    TMUS     USM       4  Undirected  \n",
+       "1218    TMUS     VMI       2  Undirected  \n",
+       "1220     WEC     XEL       2  Undirected  \n",
+       "\n",
+       "[335 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create nw_cols_sample as items with ticker1 and ticker2 in sample_tickers\n",
+    "nw_cols_sample = nw_cols[(nw_cols['ticker1'].isin(sample_tickers)) & (nw_cols['ticker2'].isin(sample_tickers))]\n",
+    "nw_cols_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load as graph\n",
+    "G_sample = nx.from_pandas_edgelist(nw_cols_sample, \n",
+    "                            source='Source', \n",
+    "                            target='Target', \n",
+    "                            edge_attr='weight'\n",
+    "                            )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Local cdn resources have problems on chrome/safari when used in jupyter-notebook. \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"600px\"\n",
+       "            src=\"../../../Output/Company Mentions Network/Firm_Company_Mentions_Network_50_Percent_Node_Sample.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x26017ffa610>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Pyvis network\n",
+    "pvn = Network(notebook=True)\n",
+    "pvn.from_nx(G_sample)\n",
+    "#pvn.toggle_physics(True) # turn off movement\n",
+    "# add physics controls\n",
+    "pvn.show_buttons(filter_=['physics'])\n",
+    "# use repulsion\n",
+    "pvn.repulsion(node_distance=100)\n",
+    "pvn.show('../../../Output/Company Mentions Network/Firm_Company_Mentions_Network_50_Percent_Node_Sample.html')"
    ]
   }
  ],
