--- a/Output/All Data EDA/Tabular EDA/num_quarters_and_companies.tex
+++ b/Output/All Data EDA/Tabular EDA/num_quarters_and_companies.tex
@@ -57,3 +57,7 @@
 \renewcommand{\numCompanies}{437}
 \renewcommand{\numQuarters}{5,670}
 \renewcommand{\numCompanies}{437}
+\renewcommand{\numQuarters}{5,509}
+\renewcommand{\numCompanies}{429}
+\renewcommand{\numQuarters}{5,509}
+\renewcommand{\numCompanies}{429}
