ready to be run in SCF

--- a/Code/Modelling/Logistic Regression/Change Model/Logistic_Change_Model_smote_2.ipynb
+++ b/Code/Modelling/Logistic Regression/Change Model/Logistic_Change_Model_smote_2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model 3\n"
+    "# Model 2\n"
    ]
   },
   {
@@ -29,7 +29,7 @@
     "from Logistic_Regression_Functions import *\n",
     "\n",
     "# Model name\n",
-    "model_name = 'rating_change_model_3'"
+    "model_name = 'smote_rating_change_model_2'"
    ]
   },
   {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-04-29T04:49:10.274140Z",
@@ -139,7 +139,22 @@
       " 'num__Ratio_B_diff' 'num__Ratio_C_diff' 'num__Ratio_D_diff'\n",
       " 'num__Ratio_E_diff' 'num__grossProfitRatio_diff' 'num__ebitdaratio_diff'\n",
       " 'num__operatingIncomeRatio_diff' 'num__incomeBeforeTaxRatio_diff'\n",
-      " 'num__netIncomeRatio_diff']\n"
+      " 'num__netIncomeRatio_diff' 'num__currentRatio' 'num__quickRatio'\n",
+      " 'num__cashRatio' 'num__returnOnAssets' 'num__returnOnEquity'\n",
+      " 'num__returnOnCapitalEmployed' 'num__EBITtoRevenue' 'num__debtRatio'\n",
+      " 'num__debtRatioAlt' 'num__debtEquityRatio' 'num__equityMultiplier'\n",
+      " 'num__enterpriseValueMultiplier' 'num__operatingCashFlowPerShare'\n",
+      " 'num__freeCashFlowPerShare' 'num__cashPerShare'\n",
+      " 'num__operatingCashFlowToSales' 'num__freeCashFlowToOperatingCashFlow'\n",
+      " 'num__currentRatio_diff' 'num__quickRatio_diff' 'num__cashRatio_diff'\n",
+      " 'num__returnOnAssets_diff' 'num__returnOnEquity_diff'\n",
+      " 'num__returnOnCapitalEmployed_diff' 'num__EBITtoRevenue_diff'\n",
+      " 'num__debtRatio_diff' 'num__debtRatioAlt_diff'\n",
+      " 'num__debtEquityRatio_diff' 'num__equityMultiplier_diff'\n",
+      " 'num__enterpriseValueMultiplier_diff'\n",
+      " 'num__operatingCashFlowPerShare_diff' 'num__freeCashFlowPerShare_diff'\n",
+      " 'num__cashPerShare_diff' 'num__operatingCashFlowToSales_diff'\n",
+      " 'num__freeCashFlowToOperatingCashFlow_diff']\n"
      ]
     }
    ],
@@ -150,7 +165,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{-1: 100, 0: 4156, 1: 135}\n",
+      "{-1: 1000, 0: 4156, 1: 1000}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#SMOTE\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "unique, count = np.unique(y_train, return_counts=True)\n",
+    "dict_value_count = {k:v for (k, v) in zip(unique, count)}\n",
+    "print(dict_value_count)\n",
+    "sm = SMOTE(sampling_strategy={-1:1000, 1: 1000})\n",
+    "X_train_sm, y_train_sm = sm.fit_resample(X_train_scaled, y_train)\n",
+    "unique, count = np.unique(y_train_sm, return_counts=True)\n",
+    "dict_value_count = {k:v for (k, v) in zip(unique, count)}\n",
+    "print(dict_value_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-04-29T04:49:10.342853Z",
@@ -159,15 +201,29 @@
      "shell.execute_reply": "2024-04-29T05:01:57.535585Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tuned hyperparameters: {'C': 0.001, 'class_weight': None, 'l1_ratio': 0.0, 'multi_class': 'ovr', 'penalty': 'elasticnet', 'solver': 'saga'}\n",
+      "Train accuracy of best model:  0.6756406097956535\n",
+      "Best mean CV accuracy: 0.6756405756867137\n",
+      "Coefficients: [[-0.00077917  0.00014474]\n",
+      " [-0.03863574 -0.06811877]\n",
+      " [ 0.05094895  0.08603081]]\n",
+      "Corresponding class: [-1  0  1]\n"
+     ]
+    }
+   ],
    "source": [
     "# Train model\n",
-    "best_model = train_model_with_grid_search(X_train_scaled, y_train, model_name)"
+    "best_model = train_model_with_grid_search(X_train_sm, y_train_sm, model_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-04-29T05:01:57.538607Z",
